added List to OrganizationEntity